--- a/src/main/resources/messages_ja.properties
+++ b/src/main/resources/messages_ja.properties
@@ -20,3 +20,6 @@ verification.code.expired=\u8A8D\u8A3C\u30B3\u30FC\u30C9\u306E\u6709\u52B9\u671F
 access.denied=\u30A2\u30AF\u30BB\u30B9\u6A29\u9650\u304C\u3042\u308A\u307E\u305B\u3093\u3002
 input.invalid=\u7121\u52B9\u306A\u5165\u529B\u3067\u3059\u3002
 server.error=\u30B5\u30FC\u30D0\u30FC\u30A8\u30E9\u30FC\u304C\u767A\u751F\u3057\u307E\u3057\u305F\u3002
+
+comment.unauthorized.access=\u30B3\u30E1\u30F3\u30C8\u306B\u5BFE\u3059\u308B\u6A29\u9650\u304C\u3042\u308A\u307E\u305B\u3093\u3002
+comment.not.found=\u30B3\u30E1\u30F3\u30C8\u304C\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u3002
