--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -5,6 +5,7 @@ email.send.failed=\uC774\uBA54\uC77C \uC804\uC1A1\uC5D0 \uC2E4\uD328\uD588\uC2B5
 password.invalid=\uBE44\uBC00\uBC88\uD638\uAC00 \uC77C\uCE58\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 
 restaurant.not.found=\uD574\uB2F9 \uC74C\uC2DD\uC810\uC744 \uCC3E\uC744 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
+restaurant.already.registered=\uC774\uBBF8 \uB4F1\uB85D\uB41C \uC74C\uC2DD\uC810\uC785\uB2C8\uB2E4.
 
 review.not.found=\uD574\uB2F9 \uB9AC\uBDF0\uB97C \uCC3E\uC744 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
 review.unauthorized.access=\uB9AC\uBDF0\uB97C \uC218\uC815\uD560 \uAD8C\uD55C\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
