--- a/src/main/resources/messages_ja.properties
+++ b/src/main/resources/messages_ja.properties
@@ -5,6 +5,7 @@ email.send.failed=\u30E1\u30FC\u30EB\u306E\u9001\u4FE1\u306B\u5931\u6557\u3057\u
 password.invalid=\u30D1\u30B9\u30EF\u30FC\u30C9\u304C\u4E00\u81F4\u3057\u307E\u305B\u3093\u3002
 
 restaurant.not.found=\u8A72\u5F53\u3059\u308B\u30EC\u30B9\u30C8\u30E9\u30F3\u304C\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u3002
+restaurant.already.registered=\u3059\u3067\u306B\u767B\u9332\u3055\u308C\u305F\u98F2\u98DF\u5E97\u3067\u3059\u3002
 
 review.not.found=\u8A72\u5F53\u3059\u308B\u30EC\u30D3\u30E5\u30FC\u304C\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u3002
 review.unauthorized.access=\u30EC\u30D3\u30E5\u30FC\u3092\u4FEE\u6B63\u3059\u308B\u6A29\u9650\u304C\u3042\u308A\u307E\u305B\u3093\u3002
