--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -24,3 +24,9 @@ server.error=\uC11C\uBC84 \uC624\uB958\uAC00 \uBC1C\uC0DD\uD588\uC2B5\uB2C8\uB2E
 
 comment.unauthorized.access=\uB313\uAE00\uC5D0 \uB300\uD55C \uAD8C\uD55C\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
 comment.not.found=\uB313\uAE00\uC744 \uCC3E\uC744 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
+
+google.api.error=\uC720\uD6A8\uD558\uC9C0 \uC54A\uC740 \uC7A5\uC18C ID\uC785\uB2C8\uB2E4.
+
+location.not.found=\uAC80\uC0C9\uB41C \uC704\uCE58 \uC815\uBCF4\uAC00 \uC5C6\uC2B5\uB2C8\uB2E4.
+
+auth.required=\uB85C\uADF8\uC778\uD55C \uC0AC\uC6A9\uC790\uB9CC \uC774\uC6A9 \uAC00\uB2A5\uD569\uB2C8\uB2E4.
