--- a/src/main/resources/messages_ja.properties
+++ b/src/main/resources/messages_ja.properties
@@ -24,3 +24,9 @@ server.error=\u30B5\u30FC\u30D0\u30FC\u30A8\u30E9\u30FC\u304C\u767A\u751F\u3057\
 
 comment.unauthorized.access=\u30B3\u30E1\u30F3\u30C8\u306B\u5BFE\u3059\u308B\u6A29\u9650\u304C\u3042\u308A\u307E\u305B\u3093\u3002
 comment.not.found=\u30B3\u30E1\u30F3\u30C8\u304C\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u3002
+
+google.api.error=\u7121\u52B9\u306APlace ID\u3067\u3059\u3002
+
+location.not.found=\u8A72\u5F53\u3059\u308B\u5834\u6240\u306E\u60C5\u5831\u304C\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u3067\u3057\u305F\u3002
+
+auth.required=\u30ED\u30B0\u30A4\u30F3\u3057\u305F\u30E6\u30FC\u30B6\u30FC\u306E\u307F\u5229\u7528\u3067\u304D\u307E\u3059\u3002
