--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -1,32 +1,50 @@
+# \u2500\u2500\u2500\u2500\u2500 \u30E6\u30FC\u30B6\u30FC\u95A2\u9023 \u2500\u2500\u2500\u2500\u2500
 user.not.found=\uD574\uB2F9 \uC0AC\uC6A9\uC790\uB97C \uCC3E\uC744 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
+
+# \u2500\u2500\u2500\u2500\u2500 \u30E1\u30FC\u30EB\u95A2\u9023 \u2500\u2500\u2500\u2500\u2500
 email.already.exists=\uC774\uBBF8 \uC874\uC7AC\uD558\uB294 \uC774\uBA54\uC77C\uC785\uB2C8\uB2E4.
 email.not.verified=\uC774\uBA54\uC77C \uC778\uC99D\uC774 \uC644\uB8CC\uB418\uC9C0 \uC54A\uC558\uC2B5\uB2C8\uB2E4.
 email.send.failed=\uC774\uBA54\uC77C \uC804\uC1A1\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
+
+# \u2500\u2500\u2500\u2500\u2500 \u30D1\u30B9\u30EF\u30FC\u30C9\u95A2\u9023 \u2500\u2500\u2500\u2500\u2500
 password.invalid=\uBE44\uBC00\uBC88\uD638\uAC00 \uC77C\uCE58\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 
+# \u2500\u2500\u2500\u2500\u2500 \u30EC\u30B9\u30C8\u30E9\u30F3\u95A2\u9023 \u2500\u2500\u2500\u2500\u2500
 restaurant.not.found=\uD574\uB2F9 \uC74C\uC2DD\uC810\uC744 \uCC3E\uC744 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
 restaurant.already.registered=\uC774\uBBF8 \uB4F1\uB85D\uB41C \uC74C\uC2DD\uC810\uC785\uB2C8\uB2E4.
 
+# \u2500\u2500\u2500\u2500\u2500 \u30EC\u30D3\u30E5\u30FC\u95A2\u9023 \u2500\u2500\u2500\u2500\u2500
 review.not.found=\uD574\uB2F9 \uB9AC\uBDF0\uB97C \uCC3E\uC744 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
 review.unauthorized.access=\uB9AC\uBDF0\uB97C \uC218\uC815\uD560 \uAD8C\uD55C\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
 review.already.liked=\uC774\uBBF8 \uC88B\uC544\uC694\uB97C \uB204\uB978 \uB9AC\uBDF0\uC785\uB2C8\uB2E4.
 review.like.not.found=\uC88B\uC544\uC694\uD55C \uB9AC\uBDF0\uAC00 \uC5C6\uC2B5\uB2C8\uB2E4.
 
+# \u2500\u2500\u2500\u2500\u2500 \u304A\u6C17\u306B\u5165\u308A\u95A2\u9023 \u2500\u2500\u2500\u2500\u2500
 favorite.already.exists=\uC774\uBBF8 \uC990\uACA8\uCC3E\uAE30\uD55C \uC74C\uC2DD\uC810\uC785\uB2C8\uB2E4.
 favorite.not.found=\uC990\uACA8\uCC3E\uAE30\uD55C \uAE30\uB85D\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
 
+# \u2500\u2500\u2500\u2500\u2500 \u8A8D\u8A3C\u30B3\u30FC\u30C9\u95A2\u9023 \u2500\u2500\u2500\u2500\u2500
 verification.code.invalid=\uC778\uC99D \uCF54\uB4DC\uAC00 \uC62C\uBC14\uB974\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 verification.code.expired=\uC778\uC99D \uCF54\uB4DC\uAC00 \uB9CC\uB8CC\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
 
+# \u2500\u2500\u2500\u2500\u2500 \u30A2\u30AF\u30BB\u30B9\u6A29\u9650 \u2500\u2500\u2500\u2500\u2500
 access.denied=\uC811\uADFC \uAD8C\uD55C\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
+
+# \u2500\u2500\u2500\u2500\u2500 \u5165\u529B\u30D0\u30EA\u30C7\u30FC\u30B7\u30E7\u30F3 \u2500\u2500\u2500\u2500\u2500
 input.invalid=\uC720\uD6A8\uD558\uC9C0 \uC54A\uC740 \uC785\uB825\uC785\uB2C8\uB2E4.
+
+# \u2500\u2500\u2500\u2500\u2500 \u30B5\u30FC\u30D0\u30FC\u30A8\u30E9\u30FC \u2500\u2500\u2500\u2500\u2500
 server.error=\uC11C\uBC84 \uC624\uB958\uAC00 \uBC1C\uC0DD\uD588\uC2B5\uB2C8\uB2E4.
 
+# \u2500\u2500\u2500\u2500\u2500 \u30B3\u30E1\u30F3\u30C8\u95A2\u9023 \u2500\u2500\u2500\u2500\u2500
 comment.unauthorized.access=\uB313\uAE00\uC5D0 \uB300\uD55C \uAD8C\uD55C\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
 comment.not.found=\uB313\uAE00\uC744 \uCC3E\uC744 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
 
+# \u2500\u2500\u2500\u2500\u2500 Google API\u95A2\u9023 \u2500\u2500\u2500\u2500\u2500
 google.api.error=\uC720\uD6A8\uD558\uC9C0 \uC54A\uC740 \uC7A5\uC18C ID\uC785\uB2C8\uB2E4.
 
+# \u2500\u2500\u2500\u2500\u2500 \u30ED\u30B1\u30FC\u30B7\u30E7\u30F3\u95A2\u9023 \u2500\u2500\u2500\u2500\u2500
 location.not.found=\uAC80\uC0C9\uB41C \uC704\uCE58 \uC815\uBCF4\uAC00 \uC5C6\uC2B5\uB2C8\uB2E4.
 
+# \u2500\u2500\u2500\u2500\u2500 \u8A8D\u8A3C\u8981\u4EF6 \u2500\u2500\u2500\u2500\u2500
 auth.required=\uB85C\uADF8\uC778\uD55C \uC0AC\uC6A9\uC790\uB9CC \uC774\uC6A9 \uAC00\uB2A5\uD569\uB2C8\uB2E4.
