--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -1,5 +1,6 @@
 # \u2500\u2500\u2500\u2500\u2500 \u30E6\u30FC\u30B6\u30FC\u95A2\u9023 \u2500\u2500\u2500\u2500\u2500
 user.not.found=\uD574\uB2F9 \uC0AC\uC6A9\uC790\uB97C \uCC3E\uC744 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
+success.registered=\uD68C\uC6D0\uAC00\uC785\uC774 \uC644\uB8CC\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
 
 # \u2500\u2500\u2500\u2500\u2500 \u30E1\u30FC\u30EB\u95A2\u9023 \u2500\u2500\u2500\u2500\u2500
 email.already.exists=\uC774\uBBF8 \uC874\uC7AC\uD558\uB294 \uC774\uBA54\uC77C\uC785\uB2C8\uB2E4.
